--- a/package.json
+++ b/package.json
@@ -16,16 +16,21 @@
     "@mui/material": "^5.11.5",
     "@next/font": "13.1.4",
     "@prisma/client": "4.9.0",
+    "@types/glob": "^8.0.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
+    "glob": "^8.1.0",
+    "google-books-js": "^1.0.2",
     "next": "13.1.4",
     "next-auth": "^4.18.8",
+    "pdfinfo": "^0.0.3",
     "prisma": "^4.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
-  }
+  },
+  "devDependencies": {}
 }
