--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@types/react-pdf": "^6.2.0",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
     "glob": "^8.1.0",
@@ -30,7 +31,10 @@
     "prisma": "^4.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-pdf": "^6.2.2",
     "typescript": "4.9.4"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "copy-webpack-plugin": "^11.0.0"
+  }
 }
