--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next/font": "13.1.4",
     "@prisma/client": "4.9.0",
     "@types/glob": "^8.0.1",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
@@ -25,6 +26,7 @@
     "eslint-config-next": "13.1.4",
     "glob": "^8.1.0",
     "google-books-js": "^1.0.2",
+    "lodash.debounce": "^4.0.8",
     "next": "13.1.4",
     "next-auth": "^4.18.8",
     "pdfinfo": "^0.0.3",
