--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lodash.debounce": "^4.0.8",
     "next": "13.1.4",
     "next-auth": "^4.18.8",
+    "next-pwa": "^5.6.0",
     "pdfinfo": "^0.0.3",
     "prisma": "^4.9.0",
     "react": "18.2.0",
