--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-pdf": "^6.2.2",
+    "sharp": "^0.31.3",
     "typescript": "4.9.4"
   },
   "devDependencies": {
