--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "@types/react-pdf": "^6.2.0",
+    "copy-webpack-plugin": "^11.0.0",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
     "glob": "^8.1.0",
@@ -35,10 +36,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-pdf": "^6.2.2",
-    "sharp": "^0.31.3",
     "typescript": "4.9.4"
-  },
-  "devDependencies": {
-    "copy-webpack-plugin": "^11.0.0"
   }
 }
