allow fetching metadata from play books

--- a/package.json
+++ b/package.json
@@ -16,19 +16,23 @@
     "@mui/material": "^5.11.5",
     "@next/font": "13.1.4",
     "@prisma/client": "4.9.0",
+    "@types/cors": "^2.8.13",
     "@types/glob": "^8.0.1",
+    "@types/html-to-text": "^9.0.0",
     "@types/lodash.debounce": "^4.0.7",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "@types/react-pdf": "^6.2.0",
     "copy-webpack-plugin": "^11.0.0",
+    "cors": "^2.8.5",
     "epub2": "^3.0.1",
     "epubjs": "^0.3.93",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
     "glob": "^8.1.0",
     "google-books-js": "^1.0.2",
+    "html-to-text": "^9.0.5",
     "lodash.debounce": "^4.0.8",
     "next": "13.1.4",
     "next-auth": "^4.18.8",
