--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "glob": "^8.1.0",
     "google-books-js": "^1.0.2",
     "html-to-text": "^9.0.5",
+    "image-data-uri": "^2.0.1",
     "lodash.debounce": "^4.0.8",
     "next": "13.1.4",
     "next-auth": "^4.18.8",
