--- a/package.json
+++ b/package.json
@@ -43,6 +43,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-pdf": "^6.2.2",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "workbox-background-sync": "^6.5.4",
+    "workbox-expiration": "^6.5.4",
+    "workbox-routing": "^6.5.4",
+    "workbox-strategies": "^6.5.4",
+    "workbox-sw": "^6.5.4"
+  },
+  "devDependencies": {
+    "babel-loader": "^9.1.2"
   }
 }
